# scraping-tool

./: .gitignore  env.example.sh  infos.txt  main.py  pyproject.toml  routers.py  schema.py  service.py  todos.txt
qdrant_storage/: raft_state.json
qdrant_storage/collections/langchainjs-testing/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/langchainjs-testing/0/segments/01436f59-209e-4913-8c37-0befbc63cf22/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/langchainjs-testing/0/segments/1e825df4-e7c1-469c-b83f-64b13876b6c5/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/langchainjs-testing/0/segments/48d1b1ee-a96e-4383-b91f-443da37cefe0/: 000009.sst  000011.sst  IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/langchainjs-testing/0/segments/5fd73ffd-ba16-4b02-ae50-74131b7ca53f/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/langchainjs-testing/0/segments/7ab504ee-d80b-4409-bb85-77cdd08c931e/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/langchainjs-testing/0/segments/9aa9f58b-18cf-4c13-82cb-54b6ff7de726/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/langchainjs-testing/0/segments/abd82c28-019a-4dfc-96d4-abab77bc3d82/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/langchainjs-testing/0/segments/ad716e62-cc7a-4e42-947e-e076e7725336/: IDENTITY  LOG  MANIFEST-000005
scraper/: output.json
scraper/scraper/services/: selector.service.py  selector_service.py
scraper/scraper/spiders/: myScraper.py  testScraper.py
(+24 files in other folders)
