[project]
name = "katja"
version = "0.1.0"
description = ""
authors = [
    {name = "lennard.tappe",email = "lennardtappe@googlemail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "google-api-python-client (>=2.159.0,<3.0.0)",
    "scrapy (>=2.12.0,<3.0.0)",
    "firecrawl-py (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
